v1.5.9 - Updated ioc-liturgical-react version to fix flag flicker

--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,10 @@ div.container-fluid {
     font-style: italic;
 }
 .App-flag {
-    height: 20px;
-    width: 20px;
+    height: 1em;
+    width: 1.3em;
 }
+
 #basic-nav-dropdown {
     padding-top: 21px;
     padding-left: 22px;
